# lawminds-service

./: ingest.py  pyproject.toml  railway.json
app/: config.py  main.py  memory.py  vectorstore.py
